// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`radio-group [snapshot] > md, horizontal 1`] = `
<div
  aria-orientation="horizontal"
  aria-required="false"
  class="vesper-radio-group vesper-radio-group-horizontal"
  data-orientation="horizontal"
  dir="ltr"
  role="radiogroup"
  style="outline: none;"
  tabindex="0"
>
  <label
    class="vesper-radio-group-item-wrapper"
  >
    <button
      aria-checked="false"
      class="vesper-radio-group-item vesper-radio-group-item-md"
      data-orientation="horizontal"
      data-radix-collection-item=""
      data-state="unchecked"
      role="radio"
      tabindex="-1"
      type="button"
      value="option-a"
    />
    <span
      class="vesper-typography vesper-typography-label-lg vesper-radio-group-item-label"
    >
      Option A
    </span>
  </label>
  <label
    class="vesper-radio-group-item-wrapper"
  >
    <button
      aria-checked="false"
      class="vesper-radio-group-item vesper-radio-group-item-md"
      data-orientation="horizontal"
      data-radix-collection-item=""
      data-state="unchecked"
      role="radio"
      tabindex="-1"
      type="button"
      value="option-b"
    />
    <span
      class="vesper-typography vesper-typography-label-lg vesper-radio-group-item-label"
    >
      Option B
    </span>
  </label>
  <label
    class="vesper-radio-group-item-wrapper"
  >
    <button
      aria-checked="false"
      class="vesper-radio-group-item vesper-radio-group-item-md"
      data-orientation="horizontal"
      data-radix-collection-item=""
      data-state="unchecked"
      role="radio"
      tabindex="-1"
      type="button"
      value="option-c"
    />
    <span
      class="vesper-typography vesper-typography-label-lg vesper-radio-group-item-label"
    >
      Option C
    </span>
  </label>
</div>
`;

exports[`radio-group [snapshot] > md, horizontal, disabled 1`] = `
<div
  aria-orientation="horizontal"
  aria-required="false"
  class="vesper-radio-group vesper-radio-group-horizontal"
  data-disabled=""
  data-orientation="horizontal"
  dir="ltr"
  role="radiogroup"
  style="outline: none;"
  tabindex="-1"
>
  <label
    class="vesper-radio-group-item-wrapper"
    data-disabled="true"
  >
    <button
      aria-checked="false"
      class="vesper-radio-group-item vesper-radio-group-item-md"
      data-disabled=""
      data-orientation="horizontal"
      data-radix-collection-item=""
      data-state="unchecked"
      disabled=""
      role="radio"
      tabindex="-1"
      type="button"
      value="option-a"
    />
    <span
      class="vesper-typography vesper-typography-label-lg vesper-radio-group-item-label"
    >
      Option A
    </span>
  </label>
  <label
    class="vesper-radio-group-item-wrapper"
    data-disabled="true"
  >
    <button
      aria-checked="false"
      class="vesper-radio-group-item vesper-radio-group-item-md"
      data-disabled=""
      data-orientation="horizontal"
      data-radix-collection-item=""
      data-state="unchecked"
      disabled=""
      role="radio"
      tabindex="-1"
      type="button"
      value="option-b"
    />
    <span
      class="vesper-typography vesper-typography-label-lg vesper-radio-group-item-label"
    >
      Option B
    </span>
  </label>
  <label
    class="vesper-radio-group-item-wrapper"
    data-disabled="true"
  >
    <button
      aria-checked="false"
      class="vesper-radio-group-item vesper-radio-group-item-md"
      data-disabled=""
      data-orientation="horizontal"
      data-radix-collection-item=""
      data-state="unchecked"
      disabled=""
      role="radio"
      tabindex="-1"
      type="button"
      value="option-c"
    />
    <span
      class="vesper-typography vesper-typography-label-lg vesper-radio-group-item-label"
    >
      Option C
    </span>
  </label>
</div>
`;

exports[`radio-group [snapshot] > md, vertical 1`] = `
<div
  aria-orientation="vertical"
  aria-required="false"
  class="vesper-radio-group vesper-radio-group-vertical"
  data-orientation="vertical"
  dir="ltr"
  role="radiogroup"
  style="outline: none;"
  tabindex="0"
>
  <label
    class="vesper-radio-group-item-wrapper"
  >
    <button
      aria-checked="false"
      class="vesper-radio-group-item vesper-radio-group-item-md"
      data-orientation="vertical"
      data-radix-collection-item=""
      data-state="unchecked"
      role="radio"
      tabindex="-1"
      type="button"
      value="option-a"
    />
    <span
      class="vesper-typography vesper-typography-label-lg vesper-radio-group-item-label"
    >
      Option A
    </span>
  </label>
  <label
    class="vesper-radio-group-item-wrapper"
  >
    <button
      aria-checked="false"
      class="vesper-radio-group-item vesper-radio-group-item-md"
      data-orientation="vertical"
      data-radix-collection-item=""
      data-state="unchecked"
      role="radio"
      tabindex="-1"
      type="button"
      value="option-b"
    />
    <span
      class="vesper-typography vesper-typography-label-lg vesper-radio-group-item-label"
    >
      Option B
    </span>
  </label>
  <label
    class="vesper-radio-group-item-wrapper"
  >
    <button
      aria-checked="false"
      class="vesper-radio-group-item vesper-radio-group-item-md"
      data-orientation="vertical"
      data-radix-collection-item=""
      data-state="unchecked"
      role="radio"
      tabindex="-1"
      type="button"
      value="option-c"
    />
    <span
      class="vesper-typography vesper-typography-label-lg vesper-radio-group-item-label"
    >
      Option C
    </span>
  </label>
</div>
`;

exports[`radio-group [snapshot] > md, vertical, disabled 1`] = `
<div
  aria-orientation="vertical"
  aria-required="false"
  class="vesper-radio-group vesper-radio-group-vertical"
  data-disabled=""
  data-orientation="vertical"
  dir="ltr"
  role="radiogroup"
  style="outline: none;"
  tabindex="-1"
>
  <label
    class="vesper-radio-group-item-wrapper"
    data-disabled="true"
  >
    <button
      aria-checked="false"
      class="vesper-radio-group-item vesper-radio-group-item-md"
      data-disabled=""
      data-orientation="vertical"
      data-radix-collection-item=""
      data-state="unchecked"
      disabled=""
      role="radio"
      tabindex="-1"
      type="button"
      value="option-a"
    />
    <span
      class="vesper-typography vesper-typography-label-lg vesper-radio-group-item-label"
    >
      Option A
    </span>
  </label>
  <label
    class="vesper-radio-group-item-wrapper"
    data-disabled="true"
  >
    <button
      aria-checked="false"
      class="vesper-radio-group-item vesper-radio-group-item-md"
      data-disabled=""
      data-orientation="vertical"
      data-radix-collection-item=""
      data-state="unchecked"
      disabled=""
      role="radio"
      tabindex="-1"
      type="button"
      value="option-b"
    />
    <span
      class="vesper-typography vesper-typography-label-lg vesper-radio-group-item-label"
    >
      Option B
    </span>
  </label>
  <label
    class="vesper-radio-group-item-wrapper"
    data-disabled="true"
  >
    <button
      aria-checked="false"
      class="vesper-radio-group-item vesper-radio-group-item-md"
      data-disabled=""
      data-orientation="vertical"
      data-radix-collection-item=""
      data-state="unchecked"
      disabled=""
      role="radio"
      tabindex="-1"
      type="button"
      value="option-c"
    />
    <span
      class="vesper-typography vesper-typography-label-lg vesper-radio-group-item-label"
    >
      Option C
    </span>
  </label>
</div>
`;

exports[`radio-group [snapshot] > sm, horizontal 1`] = `
<div
  aria-orientation="horizontal"
  aria-required="false"
  class="vesper-radio-group vesper-radio-group-horizontal"
  data-orientation="horizontal"
  dir="ltr"
  role="radiogroup"
  style="outline: none;"
  tabindex="0"
>
  <label
    class="vesper-radio-group-item-wrapper"
  >
    <button
      aria-checked="false"
      class="vesper-radio-group-item vesper-radio-group-item-sm"
      data-orientation="horizontal"
      data-radix-collection-item=""
      data-state="unchecked"
      role="radio"
      tabindex="-1"
      type="button"
      value="option-a"
    />
    <span
      class="vesper-typography vesper-typography-label-md vesper-radio-group-item-label"
    >
      Option A
    </span>
  </label>
  <label
    class="vesper-radio-group-item-wrapper"
  >
    <button
      aria-checked="false"
      class="vesper-radio-group-item vesper-radio-group-item-sm"
      data-orientation="horizontal"
      data-radix-collection-item=""
      data-state="unchecked"
      role="radio"
      tabindex="-1"
      type="button"
      value="option-b"
    />
    <span
      class="vesper-typography vesper-typography-label-md vesper-radio-group-item-label"
    >
      Option B
    </span>
  </label>
  <label
    class="vesper-radio-group-item-wrapper"
  >
    <button
      aria-checked="false"
      class="vesper-radio-group-item vesper-radio-group-item-sm"
      data-orientation="horizontal"
      data-radix-collection-item=""
      data-state="unchecked"
      role="radio"
      tabindex="-1"
      type="button"
      value="option-c"
    />
    <span
      class="vesper-typography vesper-typography-label-md vesper-radio-group-item-label"
    >
      Option C
    </span>
  </label>
</div>
`;

exports[`radio-group [snapshot] > sm, horizontal, disabled 1`] = `
<div
  aria-orientation="horizontal"
  aria-required="false"
  class="vesper-radio-group vesper-radio-group-horizontal"
  data-disabled=""
  data-orientation="horizontal"
  dir="ltr"
  role="radiogroup"
  style="outline: none;"
  tabindex="-1"
>
  <label
    class="vesper-radio-group-item-wrapper"
    data-disabled="true"
  >
    <button
      aria-checked="false"
      class="vesper-radio-group-item vesper-radio-group-item-sm"
      data-disabled=""
      data-orientation="horizontal"
      data-radix-collection-item=""
      data-state="unchecked"
      disabled=""
      role="radio"
      tabindex="-1"
      type="button"
      value="option-a"
    />
    <span
      class="vesper-typography vesper-typography-label-md vesper-radio-group-item-label"
    >
      Option A
    </span>
  </label>
  <label
    class="vesper-radio-group-item-wrapper"
    data-disabled="true"
  >
    <button
      aria-checked="false"
      class="vesper-radio-group-item vesper-radio-group-item-sm"
      data-disabled=""
      data-orientation="horizontal"
      data-radix-collection-item=""
      data-state="unchecked"
      disabled=""
      role="radio"
      tabindex="-1"
      type="button"
      value="option-b"
    />
    <span
      class="vesper-typography vesper-typography-label-md vesper-radio-group-item-label"
    >
      Option B
    </span>
  </label>
  <label
    class="vesper-radio-group-item-wrapper"
    data-disabled="true"
  >
    <button
      aria-checked="false"
      class="vesper-radio-group-item vesper-radio-group-item-sm"
      data-disabled=""
      data-orientation="horizontal"
      data-radix-collection-item=""
      data-state="unchecked"
      disabled=""
      role="radio"
      tabindex="-1"
      type="button"
      value="option-c"
    />
    <span
      class="vesper-typography vesper-typography-label-md vesper-radio-group-item-label"
    >
      Option C
    </span>
  </label>
</div>
`;

exports[`radio-group [snapshot] > sm, vertical 1`] = `
<div
  aria-orientation="vertical"
  aria-required="false"
  class="vesper-radio-group vesper-radio-group-vertical"
  data-orientation="vertical"
  dir="ltr"
  role="radiogroup"
  style="outline: none;"
  tabindex="0"
>
  <label
    class="vesper-radio-group-item-wrapper"
  >
    <button
      aria-checked="false"
      class="vesper-radio-group-item vesper-radio-group-item-sm"
      data-orientation="vertical"
      data-radix-collection-item=""
      data-state="unchecked"
      role="radio"
      tabindex="-1"
      type="button"
      value="option-a"
    />
    <span
      class="vesper-typography vesper-typography-label-md vesper-radio-group-item-label"
    >
      Option A
    </span>
  </label>
  <label
    class="vesper-radio-group-item-wrapper"
  >
    <button
      aria-checked="false"
      class="vesper-radio-group-item vesper-radio-group-item-sm"
      data-orientation="vertical"
      data-radix-collection-item=""
      data-state="unchecked"
      role="radio"
      tabindex="-1"
      type="button"
      value="option-b"
    />
    <span
      class="vesper-typography vesper-typography-label-md vesper-radio-group-item-label"
    >
      Option B
    </span>
  </label>
  <label
    class="vesper-radio-group-item-wrapper"
  >
    <button
      aria-checked="false"
      class="vesper-radio-group-item vesper-radio-group-item-sm"
      data-orientation="vertical"
      data-radix-collection-item=""
      data-state="unchecked"
      role="radio"
      tabindex="-1"
      type="button"
      value="option-c"
    />
    <span
      class="vesper-typography vesper-typography-label-md vesper-radio-group-item-label"
    >
      Option C
    </span>
  </label>
</div>
`;

exports[`radio-group [snapshot] > sm, vertical, disabled 1`] = `
<div
  aria-orientation="vertical"
  aria-required="false"
  class="vesper-radio-group vesper-radio-group-vertical"
  data-disabled=""
  data-orientation="vertical"
  dir="ltr"
  role="radiogroup"
  style="outline: none;"
  tabindex="-1"
>
  <label
    class="vesper-radio-group-item-wrapper"
    data-disabled="true"
  >
    <button
      aria-checked="false"
      class="vesper-radio-group-item vesper-radio-group-item-sm"
      data-disabled=""
      data-orientation="vertical"
      data-radix-collection-item=""
      data-state="unchecked"
      disabled=""
      role="radio"
      tabindex="-1"
      type="button"
      value="option-a"
    />
    <span
      class="vesper-typography vesper-typography-label-md vesper-radio-group-item-label"
    >
      Option A
    </span>
  </label>
  <label
    class="vesper-radio-group-item-wrapper"
    data-disabled="true"
  >
    <button
      aria-checked="false"
      class="vesper-radio-group-item vesper-radio-group-item-sm"
      data-disabled=""
      data-orientation="vertical"
      data-radix-collection-item=""
      data-state="unchecked"
      disabled=""
      role="radio"
      tabindex="-1"
      type="button"
      value="option-b"
    />
    <span
      class="vesper-typography vesper-typography-label-md vesper-radio-group-item-label"
    >
      Option B
    </span>
  </label>
  <label
    class="vesper-radio-group-item-wrapper"
    data-disabled="true"
  >
    <button
      aria-checked="false"
      class="vesper-radio-group-item vesper-radio-group-item-sm"
      data-disabled=""
      data-orientation="vertical"
      data-radix-collection-item=""
      data-state="unchecked"
      disabled=""
      role="radio"
      tabindex="-1"
      type="button"
      value="option-c"
    />
    <span
      class="vesper-typography vesper-typography-label-md vesper-radio-group-item-label"
    >
      Option C
    </span>
  </label>
</div>
`;
